# docs/swagger.json
@@ -223,6 +223,18 @@
                         "description": "mission date to",
                         "name": "dateto",
                         "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "title keyword",
+                        "name": "titlekeyword",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "content keyword",
+                        "name": "contentkeyword",
+                        "in": "query"
                     }
                 ],
                 "responses": {
